The sooner <font> tags and inline styles can die, the better. Also, unsuccessful attempt to fix the File Upload button in the File Manager in IE (hopefully didn't break in other browsers).
Former-commit-id: fe67469a66ce2d3ec115f8c2a5adcd2dd8d957c8

--- a/plugin-resources/webapp/xnat/style/xnat.css
+++ b/plugin-resources/webapp/xnat/style/xnat.css
@@ -178,8 +178,7 @@ img { /* vertical-align: bottom ; */ }
 #warning_bar .tip_text .tip { left: 20px ; top: 25px ; width: 250px ; padding: 10px 20px ; line-height: 15px ; background: #ffc ; border: 1px solid #ee9 ; }
 
 /* footer graphic */
-
-#xnat_power { width: 100% ; margin: 75px 20px 20px 30px ; border-top: 1px solid #ccc ; }
+#xnat_power { /* width: 100% ; */ margin: 75px 20px 20px 30px ; border-top: 1px solid #ccc ; }
 #xnat_power a { float: right ; display: inline-block ; margin-top: 10px ; }
 
 /* overrides to make this thing look better? */
